Fixing nav overflow. I hope

--- a/style.scss
+++ b/style.scss
@@ -203,7 +203,7 @@ input {
 
     ul {
       display: grid;
-      grid-template-columns: repeat(4, auto);
+      grid-template-columns: repeat(5, auto);
       gap: 3.5rem;
       padding-inline-start: 0;
       text-align: center;
